--- a/internationaleregler/templates/internationaleregler/temp.html
+++ b/internationaleregler/templates/internationaleregler/temp.html
@@ -11,11 +11,31 @@
 
     <link rel="stylesheet" type="text/css" href="https://django-billsplitter-files.s3.eu-central-1.amazonaws.com/static/bill_splitter/css/test.css">
     <!-- <link rel="stylesheet" type="text/css" href="{% static 'bill_splitter/css/test.css' %}"> -->
-    <title>Internationaleregler</title>
+    <title>Hello, world!</title>
 </head>
 <body>
-    {% block title %}{% endblock %}
-    
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Features</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#">Disabled</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
     <div class="container">
         {% if messages %}
           {% for message in messages %}
