Finished international rules

--- a/internationaleregler/templates/internationaleregler/home.html
+++ b/internationaleregler/templates/internationaleregler/home.html
@@ -12,6 +12,9 @@
     <ul class="list-group mt-5 text-center">
         <li class="list-group-item">Man kan kun kalde bordet fanger på en person, dvs. ikke et "vi"</li>
         <li class="list-group-item">Hvis man vil sige "aldrig alene" skal det være det første man siger, og det skal siges lige efter man er blevet fanget</li>
+        <li class="list-group-item">Man kan ikke blive bordet fanger på et citat</li>
+        <li class="list-group-item">Man kan ikke blive bordet fanger på at synge med på en sang</li>
+        <li class="list-group-item">Hvis man bryder en bordet fanger skylder man et øltårn i KB</li>
     </ul>
 </div>
 {% endblock content %}
