--- a/internationaleregler/templates/internationaleregler/drengene.html
+++ b/internationaleregler/templates/internationaleregler/drengene.html
@@ -19,24 +19,61 @@
         <i> Så det er bare at læne sig tilbage med sin lunke harboe, smække benene op og nyde denne kulturskat fra Danmarks Radio.</i></p>
 </div>
         
-<div class="card text-center bg-success">
+<div class="card text-center bg-success mb-5">
     <div class="card-header">
         Du står da ikke og putter lort i maden?
     </div>
     <div class="card-body">
       <p class="card-text">Til dig der måske ser denne skønhed af en serie for første gang i dit sørgelige liv, er der lavet disse regler. Så bliver du hverken for vissen til at nyde forestillingen, men samtidig ikke er ædruelig nok til at kunne finde hjem efter 12 timer i selskab med drengene.</p>
     </div>
-  </div>
-<div class="mb-5"> 
-    <ul class="list-group">
-        <li class="">Man kan kun kalde bordet fanger på en person, dvs. ikke et "vi"</li>
-        <li class="">Hvis man vil sige "aldrig alene" skal det være det første man siger, og det skal siges lige efter man er blevet fanget</li>
-    </ul>
+    <div class=""> 
+        <ul class="list-group text-center">
+            <li class="list-group-item">Hver gang Henning Primdal roser råmaterialet på cykelholdet - så tager vi en stolt tår for drengenes potentialer til at vinde touren.</li>
+            <li class="list-group-item">Hver gang der bliver refereret til Henrik Solgård som 'Den nordjyske Juke-boks' - så tager vi 1 tår for den nordjyske juke-box</li>
+            <li class="list-group-item">Hver gang Henrik Solgaard beder Simon om X-antal minutter til at lære sangen - så skal vi bunde på den tid som han beder om.</li>
+            <li class="list-group-item">Hver gang Henrik Solgård antyder at han har fået en svær sang - så tager vi lige 1 tår for at gøre den lidt lettere.</li>
+            <li class="list-group-item">Hver gang Lars Allan (Baune) trommesæt laver lyde samtidig med at han snakker, sådan at han er nødsaget til at slukke det - så tager vi lige en tår fordi det er for svedigt et trommesæt</li>
+            <li class="list-group-item">Når Flemming spørger Ryan og de skal ud og lege med far - så tager vi lige en tår til ære for farmand</li>
+            <li class="list-group-item">Når vi rammer den ægte klassiker: Öresundsvisan - så tager vi sidemakkeren i hånden og bunder vi til ære for de 3 forelskede bøsser</li>
+            <li class="list-group-item">Når Simon Kvamm siger 'Grüs godt' - så tager vi lige en afskedstår for et vellykket afsnit</li>
+            <li class="list-group-item">Når Pim med sin flotte hollandske dialekt siger 'danke welt' - så må vi lige tage én tår for han høflige tone.</li>
+        </ul>
+    </div>
 </div>
-<div class="bg-warning text-center">
-    <h1>Medium niveau</h1>
+<div class="card text-center bg-warning mb-5">
+    <div class="card-header">
+        Det er jo svært ikke at være jubelenktusiast med det her råmateriale
+    </div>
+    <div class="card-body">
+      <p class="card-text">Dette regelsæt henvender sig til dig, der har set det er par gange, ja måske har du endda har lavet et 12 timers maraton i en kolliegiebiograf eller noget i den dur. Du kan ikke få nok af Drengene, men må alligevel se dig slået af kasse nummer 14 efter 10 timer af dette fantastiske show.</p>
+    </div>
+    <div class=""> 
+        <ul class="list-group text-center">
+            <li class="list-group-item">Når titel medolien kommer på tager man en tår</li>
+            <li class="list-group-item">Hver gang der er en der tager en tår i studiet - så tager vi en tår sammen med dem</li>
+            <li class="list-group-item">Hver gang der kommer en sang på - så tager vi lige 3 tåre.</li>
+            <li class="list-group-item">Hver gang Simon må opmuntre Dan med falske roser - så tager vi en naiv tår sammen med Dan.</li>
+            <li class="list-group-item">For hver gang Dan er usikker på sine egne jokes - så tager vi 2 sørgelige tåre for Dan.</li>
+        </ul>
+    </div>
 </div>
-<div class="bg-danger text-center">
-    <h1>Big balls niveau</h1>
+<div class="card text-center bg-danger mb-5">
+    <div class="card-header">
+        A ska' bare ha' en bette øl
+    </div>
+    <div class="card-body">
+      <p class="card-text">Hvis du helt naturligt finder Kaare til at være ,uden tvivl, den mest interessante karakter i hele serien, både med den dybde og helhed, som der bliver leveret i karakteren. Så er disse regler, som skabt for dig. Du er hverken bange for at skide i bleen, eller falde i søvn foran klaveret, for du har prøvet det hele før.</p>
+    </div>
+    <div class=""> 
+        <ul class="list-group text-center">
+            <li class="list-group-item">Hver gang Kåre siger 'Ja, nemlig ja' - så tager vi 1 tår sammen med Kåre.</li>
+            <li class="list-group-item">Hver gang den kære trommeslager Kåre bunder en bette øl - så bunder vi sammen med ham, så han ikke føler sig alene.</li>
+            <li class="list-group-item">For hver gang farmand får tæsk - så tager vi lige 2 tåre fordi far er sød og gerne vil lege.</li>
+            <li class="list-group-item">Hver gang Lars Allan (Baune) siger 'Hva' hedder det' - så tager vi lige en tår, fordi vi godt ved hvad det hedder.</li>
+            <li class="list-group-item">Når drengene tager en Øl-pibe - sørme så om ikke vi også selv tager en øl-pibe, naturligvis med lige så meget øl i som Kaare hælder op</li>
+            <li class="list-group-item">Når drengene tager en tår snaps - så tager vi også selv en tår snaps, bare for at fejre en god julefrokost</li>
+            <li class="list-group-item">Hver gang Pim indtager eller taler om stoffer - så tager vi 3 tåre</li>
+        </ul>
+    </div>
 </div>
 {% endblock content %}
