fixed online rules

--- a/internationaleregler/templates/internationaleregler/home.html
+++ b/internationaleregler/templates/internationaleregler/home.html
@@ -18,9 +18,9 @@
     </ul>
     <h3 class="text-center mt-3 p-0">Online bordet fanger regler</h3>
     <ul class="list-group mt-0 text-center mt-0">
-        <li class="list-group-item">Du skal stadig blive fanget ved at skrive noget i en chat, hvorefter en anden skriver bordet fanger</li>
-        <li class="list-group-item">For at sige aldrig alene til en tekst bordet fanger skal du skrive "aldrig alene" som det første når du skriver beskeden</li>
-        <li class="list-group-item">Tiden der må gå til at du ser beskeden er max en halv time</li>
+        <li class="list-group-item">Du kan stadig blive fanget ved at skrive noget i en chat, hvorefter en anden skriver bordet fanger</li>
+        <li class="list-group-item">For at sige aldrig alene til en tekst bordet fanger skal du skrive "aldrig alene" som det første når du ser beskeden</li>
+        <li class="list-group-item">Tiden der må gå til at du stadig kan sige aldrig alene er max 30 minutter</li>
     </ul>
     <h3 class="text-center">Silas er dum</h3>
 </div>
