--- a/internationaleregler/templates/internationaleregler/home.html
+++ b/internationaleregler/templates/internationaleregler/home.html
@@ -22,6 +22,6 @@
         <li class="list-group-item">For at sige aldrig alene til en tekst bordet fanger skal du skrive "aldrig alene" som det første når du ser beskeden</li>
         <li class="list-group-item">Tiden der må gå til at du stadig kan sige aldrig alene er max 30 minutter</li>
     </ul>
-    <h3 class="text-center">Silas er dum</h3>
+    {% comment %} <h3 class="text-center">Silas er dum</h3> {% endcomment %}
 </div>
 {% endblock content %}
