--- a/internationaleregler/templates/internationaleregler/base.html
+++ b/internationaleregler/templates/internationaleregler/base.html
@@ -27,7 +27,24 @@
         <li class="nav-item">
           <a class="nav-link" href="{% url 'drengene' %}">Drengene</a>
         </li>
+        {% if request.user.is_staff %}
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'racismelisten' %}">Racismelisten</a>
+        </li>
+        {% endif %}
       </ul>
+    </div>
+    <!--Navbar Right Side-->
+    <div class="navbar-nav mr-5">
+      {% if request.user.is_staff %}
+        <a class="nav-item nav-link" href="/admin">Admin</a>
+      {% endif %}
+
+      {% if user.is_authenticated %}
+        <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
+      {% else %}
+        <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
+      {% endif %}
     </div>
   </nav>
     {% block title %}{% endblock %}
